# grinray

./: .gitignore  CITATION.cff  Cargo.toml  README.md  pyproject.toml
examples/: debug_graphics.rs  forcecalc.rs  render.py  render_cube.py  render_cube.rs  render_cylinder.rs  render_hemisphere.rs  render_sphere.rs  render_sphere_ortho.rs  sdf_sphere.rs
examples/debug_tracer/: Cargo.toml
examples/debug_tracer/src/: main.rs  plot.py
examples/optical-forces/: .gitignore  Cargo.toml  Makefile
examples/optical-forces/src/: com.rs  main.rs
examples/optical-forces/utils/: run-grin-cap  run-grin-sphere
examples/python/: render_cube.py  render_sphere.py
examples/render_particle/: Cargo.toml
examples/render_particle/src/: main.rs
src/: camera.rs  consts.rs  lib.rs  material.rs  python.rs  ray.rs  scene.rs  tracer.rs  util.rs  world.rs
src/graphics/: camera.rs  context.rs  mod.rs  util.rs
src/materials/: checkerboard.rs  fresnel.rs  lambert.rs  lineargrin.rs  mod.rs
src/objects/: aabox.rs  cuboid.rs  cylinder.rs  hemisphere.rs  mod.rs  plane.rs  sphere.rs
src/objects/sdf/: capsule.rs  cone.rs  cuboid.rs  cylinder.rs  hemisphere.rs  mod.rs  round.rs  shells.rs  sphere.rs
src/objects/sdf/sdf2d/: line_segments.rs  mixed_segments.rs  mod.rs
