# Some examples are built as separate crates
[workspace]
members = ["examples/debug_tracer", "examples/render_particle"]

[package]
name = "grinray"
version = "0.2.0-alpha"
edition = "2021"
license = "MPL-2.0"

[lib]
name = "grinray"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true}
cgmath = "0.18.0"
slotmap = "1.0.6"
bytemuck = "1.19.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rand_distr = "0.4.3"
ndarray-npy = { version = "0.8.1", default-features = false }
ndarray = { version = "0.15.6", default-features = false }

[dev-dependencies]
image = { version = "0.25.2", default-features = false, features = ["png"]}

[features]
report-lost-rays = []